--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,10 @@ knitr::opts_chunk$set(
 # demo
 
 <!-- badges: start -->
+
 <!-- badges: end -->
 
-The goal of demo is to demonstrate how build a simple package in R
+The goal of `{demo}` is to demonstrate how build a simple package in R
 
 ## Installation
 
