--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
+[![R-CMD-check](https://github.com/jstatlab/demo/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/jstatlab/demo/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of `{demo}` is to demonstrate how build a simple package in R
